FIX: Add maven compiler plugin for Java 21